2008-09-16 [wwp]	3.5.0cvs106

	* src/account.c
	* src/account.h
	* src/compose.c
	* src/quote_fmt.c
	* src/quote_fmt_lex.l
	* src/quote_fmt_parse.y
		Add account signature (path and value string) manipulation
		keywords to the template processor. It's now possible in
		all templates to insert the account signature to an
		arbitrary location or to pass it to a external script for
		further editing.


2008-09-16 [mones]	3.5.0cvs105

	* src/imap.c
	* src/inc.c
	* src/mainwindow.c
	* src/mainwindow.h
	* src/news.c
	* src/prefs_account.h
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_other.c
	* src/send_message.c
	* src/gtk/inputdialog.c
	* src/gtk/inputdialog.h
		Implement session passwords: unsaved passwords for receiving
		or sending of accounts can be remembered while running to 
		avoid repetitive typing.
		As keeping passwords in memory is unsafe a new preference 
		in Other page is added to activate or not such capability.

2008-09-14 [colin]	3.5.0cvs104

	* src/codeconv.c
	* src/codeconv.h
		Make conv_iconv_strdup static

2008-09-12 [colin]	3.5.0cvs103

	* claws-mail.pc.in
	* src/Makefile.am
	* src/compose.c
	* src/compose.h
	* src/crash.c
	* src/folder_item_prefs.c
	* src/folder_item_prefs.h
	* src/main.c
	* src/prefs_account.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_folder_item.c
	* src/prefs_spelling.c
	* src/prefs_template.c
	* src/quote_fmt.h
	* src/quote_fmt_parse.y
	* src/toolbar.c
	* src/toolbar.h
	* src/gtk/Makefile.am
	* src/gtk/about.c
	* src/gtk/filesel.c
	* src/gtk/gtkaspell.c
	* src/gtk/gtkaspell.h
	* src/plugins/bogofilter/Makefile.am
	* src/plugins/dillo_viewer/Makefile.am
	* src/plugins/spamassassin/Makefile.am
	* src/plugins/trayicon/Makefile.am
		Switch spellchecker to Enchant

2008-09-12 [paul]	3.5.0cvs102

	* tools/README
	* tools/csv2addressbook.pl
		add support for Fox Mail

2008-09-12 [paul]	3.5.0cvs101

	* src/compose.c
	* src/prefs_wrapping.c
		changes to English

2008-09-12 [paul]	3.5.0cvs100

	* configure.ac