@@ -3518,3 +3518,4 @@
 ( cvs diff -u -r 1.65.2.59 -r 1.65.2.60 src/codeconv.c;  cvs diff -u -r 1.15.2.20 -r 1.15.2.21 src/codeconv.h;  ) > 3.5.0cvs104.patchset
 ( cvs diff -u -r 1.179.2.227 -r 1.179.2.228 src/imap.c;  cvs diff -u -r 1.149.2.94 -r 1.149.2.95 src/inc.c;  cvs diff -u -r 1.274.2.271 -r 1.274.2.272 src/mainwindow.c;  cvs diff -u -r 1.39.2.50 -r 1.39.2.51 src/mainwindow.h;  cvs diff -u -r 1.101.2.53 -r 1.101.2.54 src/news.c;  cvs diff -u -r 1.49.2.39 -r 1.49.2.40 src/prefs_account.h;  cvs diff -u -r 1.204.2.178 -r 1.204.2.179 src/prefs_common.c;  cvs diff -u -r 1.103.2.113 -r 1.103.2.114 src/prefs_common.h;  cvs diff -u -r 1.1.2.30 -r 1.1.2.31 src/prefs_other.c;  cvs diff -u -r 1.17.2.49 -r 1.17.2.50 src/send_message.c;  cvs diff -u -r 1.2.2.32 -r 1.2.2.33 src/gtk/inputdialog.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/gtk/inputdialog.h;  ) > 3.5.0cvs105.patchset
 ( cvs diff -u -r 1.61.2.84 -r 1.61.2.85 src/account.c;  cvs diff -u -r 1.11.2.11 -r 1.11.2.12 src/account.h;  cvs diff -u -r 1.382.2.475 -r 1.382.2.476 src/compose.c;  cvs diff -u -r 1.8.2.36 -r 1.8.2.37 src/quote_fmt.c;  cvs diff -u -r 1.8.2.17 -r 1.8.2.18 src/quote_fmt_lex.l;  cvs diff -u -r 1.22.2.40 -r 1.22.2.41 src/quote_fmt_parse.y;  ) > 3.5.0cvs106.patchset
+( cvs diff -u -r 1.382.2.476 -r 1.382.2.477 src/compose.c;  ) > 3.5.0cvs107.patchset
